--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -6,7 +6,28 @@ html
     link(rel='stylesheet', href='/bootstrap/css/sandstone.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    .navbar.navbar-default.navbar-fixed-top
+      .container
+        .navbar-header
+          a.navbar-brand(href='/') Seat-Tweet
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+        #navbar-main.navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li
+              a(href='/about/') About
+          
+            
+          
+    .container
+      block content
+      
+      footer
+        .row
+          .col-xs-12
+            small &copy; Eldad Hagashi 2015
     
     script(src='/javascripts/jquery-2.1.4.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
