changing titles to reflect new name bleacheerz

--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -8,5 +8,5 @@ block content
   .row
     .col-md-6.col-sm-12
       p
-        | Seat-Tweet was created to bring you the best streams from locations you care about.
+        | BLEACHEERZ was created to bring you the best streams from locations you care about.
         
