--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -9,7 +9,7 @@ html(ng-App='seattweetApp')
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          a.navbar-brand(href='/') Seat-Tweet
+          a.navbar-brand(href='/') BLEACHEERZ
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
             span.icon-bar
             span.icon-bar
